--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,37 +1,43 @@
-.Footer .Upper{
+.Footer .Upper {
     display: flex;
     justify-content: space-around;
     background-color: whitesmoke;
     padding: 5px;
 }
-.Footer .Upper div{
+
+.Footer .Upper div {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 10px;
 }
-.Footer .Upper div i{
+
+.Footer .Upper div i {
     margin-top: 8px;
     border: 2px solid rgb(0, 0, 0);
     padding: 10px;
     font-size: 30px;
     border-radius: 50%;
 }
-.Footer .Upper div p{
+
+.Footer .Upper div p {
     font-size: 20px;
 }
 
-.Footer .Middle{
+.Footer .Middle {
     display: flex;
     justify-content: space-around;
     color: whitesmoke;
 }
-.Footer .Middle h1{
+
+.Footer .Middle h1 {
     font-size: 25px;
+    margin-top: 20px;
     margin-bottom: 40px;
 }
-.Footer .Middle input{
+
+.Footer .Middle input {
     width: 400px;
     height: 40px;
     padding: 4px;
@@ -39,31 +45,92 @@
     outline: none;
     border: 1px solid white;
 }
-.Footer .Middle button{
+
+.Footer .Middle button {
     padding: 6px;
     outline: none;
     border: 2px solid white;
     background-color: white;
     transition: 0.4s;
 
-    &:hover{
+    &:hover {
         background-color: transparent;
         color: white;
     }
 }
-.Footer .Middle h6{
+
+.Footer .Middle h6 {
     margin-top: 10px;
     font-size: 14px;
     font-weight: 300;
 }
-.Footer .Middle p{
+
+.Footer .Middle p {
     cursor: pointer;
 
-    &:hover{
+    &:hover {
         text-decoration: underline;
     }
 }
-.Footer .Middle div div{
+
+.Footer .Middle div div {
     display: flex;
     gap: 10px;
+}
+
+
+@media (max-width: 768px) {
+    .Footer .Middle input {
+        width: 200px;
+    }
+
+    .Footer .Middle button {
+        padding: 2px;
+
+    }
+
+    .Footer .Middle h1 {
+        font-size: 20px;
+    }
+
+    .Footer .Upper div {
+        gap: 20px;
+    }
+
+    .InputField div {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .InputField div button {
+        font-size: 14px;
+    }
+
+    .Footer .Middle {
+        gap: 26px;
+        padding: 24px;
+    }
+
+    .Footer .Upper div i {
+        margin-top: 8px;
+        border: 2px solid rgb(0, 0, 0);
+        padding: 8px;
+        font-size: 14px;
+        border-radius: 50%;
+    }
+
+    .Footer .Upper div p {
+        font-size: 10px;
+    }
+
+    .Footer .Upper div .Location {
+        width: 200px;
+    }
+}
+
+@media (max-width: 500px) {
+    .Footer .Middle input {
+        width: 149px;
+    }
 }
