--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -195,7 +195,9 @@ body {
     .Buttons {
         position: fixed;
         top: 17px;
-        right: 10px;
+        right: -100px;
+        font-size: 10px;
+        
     }
 
     nav .Logo {
