--- a/src/FlatsInformation/Flats.css
+++ b/src/FlatsInformation/Flats.css
@@ -45,9 +45,10 @@
 
 .Flats-info {
     padding: 20px;
-    background-color: #e0e0e0;
+    background-color: var(--primary-color);
     height: 100vh;
     text-align: center;
+    color: whitesmoke;
 }
 
 .Flats-info h1 {
@@ -74,6 +75,7 @@
 
 .flat-images img {
     width: 100%;
+    cursor: pointer;
     height: auto;
     object-fit: cover;
     border-radius: 10px;
@@ -111,13 +113,13 @@
     height: 10px;
     width: 10px;
     margin: 0 5px;
-    background-color: #bbb;
+    background-color: #ffffff;
     border-radius: 50%;
     cursor: pointer;
 }
 
 .dot.active {
-    background-color: #717171;
+    background-color: #000000;
 }
 
 .flat-images::-webkit-scrollbar {
@@ -127,17 +129,53 @@
 
 
 
+.modal {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    z-index: 999;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.modal-content {
+    position: relative;
+    max-width: 80%;
+    max-height: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    color: white;
+    font-size: 30px;
+    font-weight: bold;
+    cursor: pointer;
+}
 
 /* ----------------------------------most likely--------------------------------- */
 .Most-Likely{
     background-color: white;
     margin-top: -100px;
-    margin-bottom: 50px;
     padding: 20px;
 }
 .Most-Likely h2{
     color: var(--primary-color);
     margin-left: 140px;
+    margin-bottom: 10px;
 }
 
 .Most-Likely .Images{
