--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,35 +1,37 @@
 .About-section {
-    height: 100vh;
+    height: auto;
     padding: 20px;
     position: relative;
-    top: 110px;
+    top: 150px;
+    margin-bottom: 100px;
+    z-index: -2;
 }
 
 .About {
     background-color: whitesmoke;
     padding: 20px;
-    height: 80vh;
+    height: auto;
+    padding: 20px;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
 
 .About .aboutWritten {
-    width: 50%;
+    width: 40%;
 }
 
 .About-section h1 {
-    font-size: 50px;
+    font-size: 25px;
 }
 
 .About-section p {
-    font-size: 22px;
+    font-size: 18px;
 }
 
 .aboutWritten {
     display: flex;
     flex-direction: column;
-    gap: 20px;
 }
 
 .AboutImage {
@@ -37,8 +39,8 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    width: 500px;
-    height: 500px;
+    width: 400px;
+    height: 400px;
     border-radius: 10px;
 }
 
